--- a/src/app/admin/gestion-usuariosinstituciones/editar-usuariosinstituciones/editar-usuariosinstituciones.component.html
+++ b/src/app/admin/gestion-usuariosinstituciones/editar-usuariosinstituciones/editar-usuariosinstituciones.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 p-0">
     <h3>Editar Usuario de Institución</h3>
 
     <div *ngIf="cargando" class="alert alert-info">Cargando usuario...</div>
