--- a/src/app/admin/gestion-usuariosinstituciones/listar-usuariosinstituciones/listar-usuariosinstituciones.component.html
+++ b/src/app/admin/gestion-usuariosinstituciones/listar-usuariosinstituciones/listar-usuariosinstituciones.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 p-0">
   <h3>Usuarios Institucionales</h3>
 
   <div *ngFor="let institucion of usuariosPorInstitucion | keyvalue">
