--- a/src/app/admin/gestion-institucionesejecutoras/crear-institucionesejecutoras/crear-institucionesejecutoras.component.html
+++ b/src/app/admin/gestion-institucionesejecutoras/crear-institucionesejecutoras/crear-institucionesejecutoras.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 p-0">
     <div class="card">
       <div class="card-header text-white">
         <h3 class="titulo">Crear Institución Ejecutora</h3>
