--- a/src/app/admin/gestion-institucionesejecutoras/listar-institucionesejecutoras/listar-institucionesejecutoras.component.scss
+++ b/src/app/admin/gestion-institucionesejecutoras/listar-institucionesejecutoras/listar-institucionesejecutoras.component.scss
@@ -18,15 +18,18 @@
     padding: 8px;
     width: 100%;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 0px;
+    height: 40px;
   }
-
+  .buscador {
+    width: 197px;
+}
   button {
     background-color: #007bff;
     color: white;
     padding: 8px 12px;
     border: none;
-    border-radius: 5px;
+    border-radius: 0px;
     cursor: pointer;
 
     &:hover {
@@ -41,7 +44,7 @@
   right: 0;
   background: white;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 0px;
   display: flex;
   flex-direction: column;
   min-width: 100px;
@@ -65,11 +68,17 @@
 .institucion {
   background: #f9f9f9;
   padding: 15px;
-  border-radius: 8px;
+  border-radius: 0px;
   margin-bottom: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
+.form-control {
+  border: 1px solid rgba(51, 51, 51, 0.8705882353);
+  border-radius: 0px;
+  padding: 0px 16px;
+  font-size: 16px;
+  transition: border-color 0.3s ease-in-out;
+}
 .institucion-header {
   display: flex;
   justify-content: space-between;
