--- a/src/app/admin/gestion-territorios/crear-territorio/crear-territorio.component.html
+++ b/src/app/admin/gestion-territorios/crear-territorio/crear-territorio.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 p-0">
   <div class="card">
     <div class="card-header bg-territorio text-white ">
       <h3 class="titulo">Crear Territorio</h3>
