--- a/src/app/admin/gestion-usuariosinstituciones/crear-usuariosinstituciones/crear-usuariosinstituciones.component.html
+++ b/src/app/admin/gestion-usuariosinstituciones/crear-usuariosinstituciones/crear-usuariosinstituciones.component.html
@@ -1,7 +1,7 @@
-<div class="container mt-4">
+<div class="container mt-4 p-0">
     <div class="card">
-        <div class="card-header bg-primary text-white">
-            <h3>Crear Usuario de Institución</h3>
+        <div class="card-header text-white">
+            <h3 class="titulo">Crear Usuario de Institución</h3>
         </div>
 
         <div class="card-body">
@@ -107,9 +107,13 @@
                 </div>
 
                 <!-- Botón de Guardar -->
-                <button style="margin-top: 20px;" type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">
-                    Guardar Usuario
-                </button>
+
+                <div class="button-container">
+                    <button mat-button1 class="custom-button" [disabled]="usuarioForm.invalid">
+                      Guardar
+                      <mat-icon class="icon">add_circle_outline</mat-icon>
+                    </button>
+                  </div>
 
             </form>
         </div>
