--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,7 +3,7 @@
 <div class="d-flex">
   <app-sidebar></app-sidebar>
   
-  <div class="content p-4">
+  <div class="content">
     <router-outlet></router-outlet>
   </div>
 </div>
