--- a/src/app/admin/gestion-respuestas/listar-respuestas/listar-respuestas.component.scss
+++ b/src/app/admin/gestion-respuestas/listar-respuestas/listar-respuestas.component.scss
@@ -99,6 +99,11 @@
      }
    }
    
+   .pregunta-box{
+    margin: 10px;
+    padding: 20px;
+    border: 1px solid gray;
+   }
  
    html, body {
      height: 100%;
