--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -7,13 +7,13 @@
   font-family: 'Roboto', sans-serif;
   background-color: #092039;
   color: white;
-  width: 250px;
+  width: 269px;
   height: calc(100vh - 60px);
   padding: 20px;
   position: fixed;
   top: 59px;
   left: 0;
-  overflow-y: auto;
+  overflow-y: hidden;
   z-index: 1000; 
 }
 
@@ -127,5 +127,11 @@ ul li a.active,ul li a:hover {
   color: #fff;
   padding: 5px 10px; /* Ajusta el padding si lo deseas */
 }
-
-
+/*
+::ng-deep .mat-drawer-inner-container {
+  width: 100%;
+  height: 100%;
+  overflow: visible !important;
+  -webkit-overflow-scrolling: touch;
+}
+*/
