--- a/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.html
+++ b/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.html
@@ -132,11 +132,11 @@
   
   
           <!-- ¿Quieres ser parte del programa? -->
-          <div class="row g-3 mt-4 align-items-center">
+          <div class="row g-3 mt-4 align-items-center" style="display: block;">
             <div class="col-auto">
               <label class="form-label mb-0">¿Quieres ser parte del programa?</label>
             </div>
-            <div class="col-auto">
+            <div class="col-auto d-flex">
               <div class="form-check">
                 <input
                   class="form-check-input"
@@ -181,7 +181,7 @@
           </div>
   
           <!-- Guardar -->
-          <div class="button-container mt-4">
+          <div class="button-container mt-4" style="text-align: -webkit-right;">
             <button
               type="submit"
               class="btn btn-success"
