--- a/src/app/admin/registros/registro-cuidador-principal/registro-cuidador-principal.component.scss
+++ b/src/app/admin/registros/registro-cuidador-principal/registro-cuidador-principal.component.scss
@@ -80,7 +80,9 @@
     cursor: pointer;
 
   }
-  
+  textarea#motivoNoNna {
+    height: 90px;
+}
   /* Ajustes Angular Material para selects */
   ::ng-deep .mat-mdc-form-field {
     margin-top: 0.75rem;
