--- a/src/app/admin/registros/registro-nna/registro-nna.component.html
+++ b/src/app/admin/registros/registro-nna/registro-nna.component.html
@@ -36,7 +36,7 @@
             <div class="col-md-2 d-flex align-items-end">
               <button type="button" class="btn btn-primary w-100"
                       (click)="validarRutNna()">
-                Validar rut <i class="bi bi-plus-circle"></i>
+                Validar rut   <mat-icon class="icon">add_circle_outline</mat-icon>
               </button>
             </div>
             <div class="col-md-5">
@@ -127,11 +127,11 @@
           </div>
   
           <!-- Participación en programa -->
-          <div class="row g-3 mt-4 align-items-center">
+          <div class="row g-3 mt-4 align-items-center" style="display: block;">
             <div class="col-auto">
               <label class="form-label mb-0">¿Quieres ser parte del programa?</label>
             </div>
-            <div class="col-auto">
+            <div class="col-auto d-flex">
               <div class="form-check">
                 <input class="form-check-input" type="radio"
                        formControlName="participaPrograma" [value]="true" id="progSiNna" />
@@ -159,9 +159,9 @@
           </div>
   
           <!-- Botón Guardar -->
-          <div class="button-container mt-4">
+          <div class="button-container mt-4" style="text-align: -webkit-right;">
             <button type="submit" class="btn btn-success" [disabled]="nnaForm.invalid">
-              Guardar <i class="bi bi-save"></i>
+              Guardar  <mat-icon class="icon">add_circle_outline</mat-icon>
             </button>
           </div>
   
