--- a/src/app/admin/registros/registro-nna/registro-nna.component.scss
+++ b/src/app/admin/registros/registro-nna/registro-nna.component.scss
@@ -37,12 +37,13 @@
     display: block;
   }
   .form-control {
-    border: 1px solid #ccc;
-    border-radius: 0;
-    padding: 0.5rem 0.75rem;
-    font-size: 1rem;
+    border: 1px solid rgba(51, 51, 51, 0.8705882353);
+    border-radius: 0px;
+    padding: 0px 16px;
+    font-size: 16px;
+    transition: border-color 0.3s ease-in-out;
     height: 2.5rem;
-    transition: border-color 0.3s;
+    
   }
   .form-control:focus {
     border-color: #28a745;
@@ -57,7 +58,36 @@
     gap: 0.5rem;
     height: 2.5rem;
   }
-  
+  .btn-primary{
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    width: fit-content !important;
+    background: var(--Primario-Base, #0F69C4);
+    border-radius: 0px;
+    border: none;
+}
+.btn-success {
+  display: flex
+;
+  align-items: center;
+  gap: 0.5rem;
+  border: 1px solid #0051A8;
+  background: #fff;
+  border-radius: 0px;
+  color: #0051A8;
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: center;
+  cursor: pointer;
+}
+textarea#motivoNoNna {
+  height: 90px;
+}
   /* Ajustes Angular Material selects */
   ::ng-deep .mat-mdc-form-field {
     margin-top: 0.75rem;
