--- a/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.scss
+++ b/src/app/admin/registros/registro-persona-privada/registro-persona-privada.component.scss
@@ -82,6 +82,9 @@
     text-align: center;
     cursor: pointer;
 }
+textarea#motivoNoNna {
+  height: 90px;
+}
   /* Angular Material selects */
   ::ng-deep .mat-mdc-form-field {
     margin-top: 0.75rem;
